FMWK-739 Support nested logical structures (#43)